first feedback from prof

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploring Determinants of Child Mortality: The Role of Vaccination, Healthcare Spending, and Nutrition"
+title: "Exploring Determinants of Child Mortality (2022): The Role of Vaccination, Healthcare Spending, and Nutrition, Measurement robust, figure, no histogram/scatterplot of"
 subtitle: "Findings Reveal Vaccination and Healthcare Spending as Key Drivers of Mortality Reduction"
 author: 
   - Junbo Li
@@ -25,11 +25,11 @@ library(tidyverse)
 
 # Introduction
 
-Over the past 30 years, advancements in society and technology have significantly reduced global mortality rates, particularly for children under the age of five. The under-five mortality rate declined from 93 deaths per 1,000 live births in 1990 to 37 deaths per 1,000 live births in 2022 (@worldbank). This progress represents millions of children who now have better chances of survival, marking a substantial achievement in global health.
+Over the past 30 years, advancements in society and technology have significantly reduced global mortality rates, particularly for children under the age of five. The under-five mortality rate declined from 93 deaths per 1,000 live births in 1990 to 37 deaths per 1,000 live births in 2022 [@worldbank]. This progress represents millions of children who now have better chances of survival, marking a substantial achievement in global health.
 
-In this study, we examined the under-five mortality rate for each country in 2022, focusing on three key factors: food production index, DPT vaccine coverage, and per-capita health expenditure. These factors were chosen because they reflect critical components influencing child mortality. Infectious diseases, such as pneumonia, diarrhea, and malaria, remain leading causes of under-five deaths, and these are directly linked to vaccination coverage and healthcare spending. Similarly, maternal health during childbirth is influenced by healthcare accessibility and quality, which is often tied to national health expenditures (@who2024childmortality). While food production does not directly address infectious disease or maternal health, it reflects a nation’s ability to meet nutritional needs, which is critical for preventing malnutrition—a major underlying cause of child deaths (add supporting explanation and citation).
+In this study, we examined the under-five mortality rate for each country in 2022, focusing on three key factors: food production index, DPT vaccine coverage, and per-capita health expenditure. These factors were chosen because they reflect critical components influencing child mortality. Infectious diseases, such as pneumonia, diarrhea, and malaria, remain leading causes of under-five deaths, and these are directly linked to vaccination coverage and healthcare spending. Similarly, maternal health during childbirth is influenced by healthcare accessibility and quality, which is often tied to national health expenditures [@who2024childmortality]. While food production does not directly address infectious disease or maternal health, it reflects a nation’s ability to meet nutritional needs, which is critical for preventing malnutrition—a major underlying cause of child deaths (add supporting explanation and citation).
 
-Our findings reveal that increasing vaccine coverage and per-capita health expenditures significantly reduces under-five mortality rates. However, food production index does not exhibit a direct impact, suggesting that its role is mediated by other factors such as distribution systems and food quality. Despite progress in reducing global mortality, the pace of reduction has slowed considerably since 2015, decreasing from an annual rate of 3.8% during the Millennium Development Goal (MDG) era (2000–2015) to 2.1% during the Sustainable Development Goal (SDG) era (2015–2022) (@unicef2022underfive). In 2022 alone, 4.9 million children under the age of five died, equating to approximately 13,400 deaths per day (@unicef2022underfive).
+Our findings reveal that increasing vaccine coverage and per-capita health expenditures significantly reduces under-five mortality rates. However, food production index does not exhibit a direct impact, suggesting that its role is mediated by other factors such as distribution systems and food quality. Despite progress in reducing global mortality, the pace of reduction has slowed considerably since 2015, decreasing from an annual rate of 3.8% during the Millennium Development Goal (MDG) era (2000–2015) to 2.1% during the Sustainable Development Goal (SDG) era (2015–2022) [@unicef2022underfive]. In 2022 alone, 4.9 million children under the age of five died, equating to approximately 13,400 deaths per day [@unicef2022underfive].
 
 Furthermore, the distribution of under-five mortality rates remains highly uneven. Developed countries such as Canada and the United States report mortality rates as low as 10 per 1,000 live births, while developing nations—particularly in sub-Saharan Africa—experience rates exceeding 100 per 1,000 live births (@worldbank). This disparity highlights the urgent need for targeted interventions in high-mortality regions. The factors studied in this paper, such as vaccination and healthcare spending, are actionable and can be effectively improved in these regions through foreign aid and international collaboration.
 
@@ -42,7 +42,7 @@ The primary estimand of this study is the effect of three predictors—food prod
 
 ## Overview Check packages
 
-For this analysis, we combined four data sets all together into one. All these four data sets comes from **Worldbank** open data platform (@worldbank). We employed **R** (@citeR), a coding platform to download, clean and conduct statistical analysis. Besides, we also utilized R packages **tidyverse** (@tidy), **rstanarm** (@rstanarm), **ggplot2** (@gg), **knitr** (@knitr), **arrow** (@arrow), **here** (@here), and **dpylr** (@dplyr). The paper is outlined in github using starter folder provided in **Telling Stories With Data** (@tellingstories). 
+For this analysis, we combined four data sets all together into one. All these four data sets comes from **Worldbank** open data platform [@worldbank]. We employed **R** [@citeR], a coding platform to download, clean and conduct statistical analysis. Besides, we also utilized R packages **tidyverse** [@tidy], **rstanarm** [@rstanarm], **ggplot2** [@gg], **knitr** [@knitr], **arrow** [@arrow], **here** [@here], and **dpylr** [@dplyr]. The paper is outlined in github using starter folder provided in **Telling Stories With Data** [@tellingstories]. 
 
 ## Measurement
 	
@@ -111,7 +111,7 @@ ggplot(analysis_data, aes(x = Mortality)) +
 
 ## Predictor variables
 
-In our mdoel, we have three Preditor variables, namely, Food production index, which is the relative level of agricultural production for each nation compared with the base period 2014-2016 (@worldbank); Current health expenditure per capita (current US$); and DPT vaccine percentage. 
+In our mdoel, we have three Preditor variables, namely, Food production index, which is the relative level of agricultural production for each nation compared with the base period 2014-2016 [@worldbank]; Current health expenditure per capita (current US$); and DPT vaccine percentage. 
 
 We will first look at the food production index. From @fig-food-1, we see that it ranges from 60 to 180, with a center at 110, and the shape is approximated normal distributed. @fig-food-2 is the scatter plot between Food production index and log of Mortality rate, with a best line of fit and standard error. We obsereve a slightly positive linear relationship between these two variables. Detailed relationship will be studied in @sec-model. 
 ```{r}
