First fine-tune

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -5,6 +5,16 @@
     note = {R package version 2.7.8},
     url = {https://CRAN.R-project.org/package=WDI},
   }
+  
+  @InCollection{knitr,
+    booktitle = {Implementing Reproducible Computational Research},
+    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    year = {2014},
+    note = {ISBN 978-1466561595},
+  }
 
 @Manual{citeR,
     title = {{R: A Language and Environment for Statistical Computing}},
@@ -100,3 +110,43 @@
   url = {https://www.who.int/news-room/fact-sheets/detail/children-reducing-mortality#:~:text=There%20are%20two%20targets%3A%201%20Reduce%20newborn%20mortality,25%20per%201000%20live%20births%20in%20every%20country.},
   note = {Accessed November 18, 2024}
 }
+
+
+@misc{worldbank2024M,
+  author       = {{World Bank}},
+  title        = {Mortality Rate, Under-5 (per 1,000 Live Births)},
+  year         = {2024},
+  note         = {World Development Indicators},
+  url          = {https://data.worldbank.org/indicator/SH.DYN.MORT},
+  urldate      = {2024-11-19}
+}
+
+@misc{worldbank_foodindex2024,
+  author       = {{World Bank}},
+  title        = {Food Production Index (2014-2016 = 100)},
+  year         = {2024},
+  note         = {World Development Indicators},
+  url          = {https://data.worldbank.org/indicator/AG.PRD.FOOD.XD},
+  urldate      = {2024-11-19}
+}
+
+@misc{worldbank_health_expenditure_us,
+  author       = {{World Bank}},
+  title        = {Current Health Expenditure (% of GDP) - United States},
+  year         = {2024},
+  note         = {World Development Indicators},
+  url          = {https://data.worldbank.org/indicator/SH.XPD.CHEX.GD.ZS?locations=US},
+  urldate      = {2024-11-24}
+}
+
+@misc{worldbank_dpt_immunization,
+  author       = {{World Bank}},
+  title        = {Immunization, DPT (% of children ages 12-23 months)},
+  year         = {2024},
+  note         = {World Development Indicators},
+  url          = {https://data.worldbank.org/indicator/SH.IMM.IDPT},
+  urldate      = {2024-11-24}
+}
+
+
+
