--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploring Determinants of Child Mortality (2022): The Role of Vaccination, Healthcare Spending, and Nutrition, Measurement robust, figure, no histogram/scatterplot of"
+title: "Exploring Determinants of Child Mortality (2022): The Role of Vaccination, Healthcare Spending, and Nutrition figure, no histogram/scatterplot of"
 subtitle: "Findings Reveal Vaccination and Healthcare Spending as Key Drivers of Mortality Reduction"
 author: 
   - Junbo Li
@@ -46,21 +46,25 @@ For this analysis, we combined four data sets all together into one. All these f
 
 ## Measurement
 	
-The data used in this study were collected from established international organizations and reflect key metrics in health and socioeconomic development. The under-five mortality rate, the primary response variable, is measured as the probability per 1,000 live births that a child will not survive to their fifth birthday, given age-specific mortality rates of the specified year. This indicator is developed by the UN Inter-agency Group for Child Mortality Estimation and leverages statistical models to reconcile differences among multiple data sources.
+The analysis in this study relies on four datasets, each collected and prepared by various UN-affiliated organizations. Below, we provide a brief overview of the measurement and transformation processes for these datasets. Detailed descriptions and methodological specifics can be found in @sec-methods.
 
-Predictors include:
+### Response variable:
 
-**Food Production Index**: This metric, provided by the Food and Agriculture Organization, captures the aggregate volume of food production normalized to the 2014-2016 base period. It excludes non-nutritive edible items such as coffee and tea and accounts for deductions of intermediate agricultural inputs like seed and feed.
+**Mortality Rate**: The child mortality rate is estimated by the UN Inter-agency Group for Child Mortality Estimation (IGME). The primary data source is each country's vital registration system. These raw data are then processed using a statistical model developed collaboratively by UN agencies and academic institutions to derive robust mortality rate estimates [@worldbank2024M]. 
 
-**Health Expenditure per Capita**: Sourced from the World Health Organization’s Global Health Expenditure database, this indicator measures current health spending per capita in current US dollars, including goods and services consumed annually.
+### Predictors:
 
-**DPT Vaccine Coverage**: This is the percentage of children aged 12-23 months who received three doses of the diphtheria, pertussis, and tetanus vaccine, based on estimates derived from national administrative data and household surveys.
+**Food Production Index**: This index, prepared by the Food and Agriculture Organization (FAO) of the United Nations, measures aggregate food production relative to the 2014–2016 baseline period. It is calculated using price-weighted data on agricultural products for each country on an annual basis [@worldbank_foodindex2024].
+
+**Health Expenditure per Capita**: Data on health expenditure per capita are produced by the World Health Organization (WHO) following the System of Health Accounts 2011 (SHA 2011) framework. This framework tracks all health-related spending in a country over a defined time period [@worldbank_health_expenditure_us]. 
+
+**DPT Vaccine Coverage**: DPT vaccine coverage is jointly estimated by the WHO and UNICEF. This metric reflects the percentage of children aged 12–23 months in each country who have received the diphtheria, pertussis (whooping cough), and tetanus (DPT) vaccine. Estimates are derived from reports by vaccine service providers and household surveys of vaccination history [@worldbank_dpt_immunization]. 
 
 ## Outcome variables
 
-The response variable in our analysis is the mortality rate below 5 year-old children for all countries. Here Mortality rate is calculated based on number of deaths of children under 5 years old per 1000 person. The histogram of this variable is shown in @fig-mor-1. We observe that the data ranges from 0 to 120, with a peak at 10-15. 
+The response variable in this study is the under-five mortality rate, measured as the number of deaths of children under five years old per 1,000 live births.
 
-However, this data is extremely right skewed and have several outlyers, thus we decided to perform log transformation to stabilize the variance and in-proving the normality of our dataset for a better regression model latter. The distribution after we perform log transformation is shown in @fig-mor-2, here the distribution is approximately normal ranging from 2 to 5 with a peak at 3. 
+The untransformed data range from 0 to 120, with a peak between 10 and 15 deaths per 1,000 live births (@fig-mor-1). Due to the presence of extreme values and significant right skewness, a log transformation was applied to stabilize variance and improve normality. The transformed data range from 2 to 5, with a peak near 3 (@fig-mor-2).
 
 ```{r}
 #| label: fig-mor
@@ -111,13 +115,18 @@ ggplot(analysis_data, aes(x = Mortality)) +
 
 ## Predictor variables
 
-In our mdoel, we have three Preditor variables, namely, Food production index, which is the relative level of agricultural production for each nation compared with the base period 2014-2016 [@worldbank]; Current health expenditure per capita (current US$); and DPT vaccine percentage. 
+The three predictors analyzed are:
 
-We will first look at the food production index. From @fig-food-1, we see that it ranges from 60 to 180, with a center at 110, and the shape is approximated normal distributed. @fig-food-2 is the scatter plot between Food production index and log of Mortality rate, with a best line of fit and standard error. We obsereve a slightly positive linear relationship between these two variables. Detailed relationship will be studied in @sec-model. 
+**Food Production Index:** 
+The Food Production Index measures the relative level of agricultural production for each country compared to the 2014–2016 baseline [@worldbank]. This index reflects price-weighted data of agricultural products for each country.
+
+Distribution: As shown in @fig-food-1, the index ranges from 60 to 180, with a center around 110 and an approximately normal distribution.
+
+Relationship with Mortality: Scatter plot analysis (@fig-food-2) reveals a slightly positive linear relationship between food production and the log-transformed mortality rate, with a fitted line and confidence intervals. This relationship will be explored in greater detail in @sec-model.
 ```{r}
 #| label: fig-food
 #| fig-cap: Data Analysis of Predictor Food Production Index
-#| fig-subcap: ["Histogram of each countries' food production index", "Scatter plot of each countries' Food production index VS. Log of Mortality"]
+#| fig-subcap: ["Counts of Food production index for each country, measured as a basis of 2014-1016", "Relationship of each countries' Food production index VS. Log of Mortality rate"]
 #| echo: false
 #| warning: false
 #| message: false
@@ -154,11 +163,16 @@ ggplot(analysis_data, aes(x = Food, y = Mortality)) +
     axis.title = element_text(size = 12)
   )
 ```
-Next is the Current health expenditure. From @fig-health-1, we see that it ranges from 0 to 12000, but the shape of the distribution is extremely skewed to the right. Thus we decided to perform a log transformation to stabilize the normal shape. @fig-health-2 is the histogram after the log transformation, we see that it now ranges from 0 to 10 with a center at 6 and the shape a approximately normal now. @fig-health-3 is a scatter plot between Log of Mortality rate and Log of Current health Expenditure, with a best line of fit and standard error. We observe a significant negative linear relationship between these two variables. Detailed relationshape will be studied in @sec-model. 
+**Current Health Expenditure:**
+The Current Health Expenditure per Capita (measured in USD) reflects each country's health spending, collected using the System of Health Accounts (SHA 2011) framework.
+
+Distribution: The raw data ranges from $0 to $12,000, as shown in @fig-health-1. Due to extreme right skewness, we applied a log transformation to normalize the distribution, resulting in a range of 0 to 10, with a center at 6 (@fig-health-2).
+
+Relationship with Mortality: As illustrated in @fig-health-3, a significant negative linear relationship exists between log-transformed health expenditure and log mortality rate. Further analysis is detailed in @sec-model.
 ```{r}
 #| label: fig-health
 #| fig-cap: Data Analysis of Predictor Current Health Expenditure
-#| fig-subcap: ["Histogram of each countries' Health Expenditure Per Capita, Measured in US$. Before log transformation", "Histogram of each countries' Health Expenditure Per Capita, Measured in US$. After log transformation", "Scatter plot of each countries' Health Expenditure Per Capita, Measured in US$ VS. Log of Mortality"]
+#| fig-subcap: ["Counts of each countries' Health Expenditure Per Capita, Measured in US$. Before log transformation", "Counts of each countries' Health Expenditure Per Capita, Measured in US$. After log transformation", "Relationship of each countries' Health Expenditure Per Capita, Measured in US$ VS. Log of Mortality"]
 #| echo: false
 #| warning: false
 #| message: false
@@ -210,11 +224,16 @@ ggplot(analysis_data, aes(x = Health_expense, y = Mortality)) +
     axis.title = element_text(size = 12)
   )
 ```
-Finally is the DPT vaccine percentage. From @fig-DPT-1, we see that it ranges from 30 to 100, but the shape of the distribution is skewed to the left, we will discuss this in @sec-results. Here we do not have efficient tecnics to stablize the distribution. @fig-DPT-2 is a scatter plot between DPT vaccine percentage and Log of Mortality rate, with a best line of fit and standard error. We observe a significant negative linear relationship between these two variables. Detailed relationship will be studied in @sec-model. 
+DPT Vaccine Coverage
+The DPT Vaccine Coverage measures the percentage of children aged 12–23 months who received vaccinations for diphtheria, pertussis, and tetanus.
+
+Distribution: As shown in @fig-DPT-1, coverage ranges from 30% to 100%, with a left-skewed distribution.
+
+Relationship with Mortality: A significant negative association is observed in @fig-DPT-2. This relationship will be analyzed further in @sec-model.
 ```{r}
 #| label: fig-DPT
 #| fig-cap: Data Analysis of Predictor DPT Vaccine Percentage
-#| fig-subcap: ["Histogram of each countries' DPT vaccine percentage", "Scatter plot of each countries' DPT Vaccine Percentage VS. Log of Mortality"]
+#| fig-subcap: ["Counts of each countries' DPT vaccine percentage", "Relationship of each countries' DPT Vaccine Percentage VS. Log of Mortality"]
 #| echo: false
 #| warning: false
 #| message: false
@@ -254,8 +273,10 @@ ggplot(analysis_data, aes(x = Vacinne, y = Mortality)) +
   )
 ```
 ## Missing Data and Time Inconsistancy
-In our file, the varible Health Expendure is collect for year 2021 while the others is collected in year 2022. We done this is because there is n data avliable for year 2022 of this data. We believe that these data are recent and so the data collected in year 2021 could still do a good job associating data in 2022. 
-Also there are a few data missing for some minor countries. We made the decision to drop them and continue our modeling. We will discuss further implications of these two in @sec-results
+The health expenditure variable was collected in 2021, while other variables reflect 2022 data. This discrepancy is due to unavailability of more recent health expenditure data. These 2021 values are assumed to approximate 2022 conditions sufficiently for analysis.
+
+Additionally, some smaller countries lacked complete data and were excluded from the analysis. The implications of these omissions are addressed in @sec-results.
+
 
 
 # Model {#sec-model}
@@ -296,22 +317,21 @@ The Bayesian framework is employed due to its ability to incorporate prior knowl
 
 Our results are summarized in @tbl-modelresults.
 
-##Intercept:
+## Intercept:
 The intercept estimate of 6.643 represents the expected logarithm of the under-five mortality rate when all predictors are held constant at their reference or baseline values (e.g., average food production, average vaccine coverage, and average health expenditure). This serves as a baseline for interpreting the effects of the predictors.
 
-##Food:
-Food Production Index:
-The coefficient for the food production index is 0.003, indicating a very slight positive relationship between food production and the under-five mortality rate. This naïvely suggests that reducing food production could also reduce mortality, which is counter-intuitive.
+## Food Production Index:
+The coefficient for the food production index is 0.003, indicating a very slight positive relationship between food production and the under-five mortality rate. This naively suggests that reducing food production could also reduce mortality, which is counter-intuitive.
 
 However, a closer examination of the confidence interval for this predictor shows that it includes 0. This implies that the relationship is not statistically significant, and food production is not strongly related to overall under-five mortality rates.
 This finding suggests that while food production is essential for societal well-being, its immediate impact on reducing child mortality might depend on other factors such as food access, distribution systems, and nutritional quality.
 
-##Vaccine Coverage:
+## Vaccine Coverage:
 The coefficient for vaccine coverage is -0.013, meaning that for every 1 percentage point increase in vaccine coverage, the logarithm of the under-five mortality rate decreases by 1.3%, holding other variables constant.
 
 This highlights the critical role of vaccination programs in reducing child mortality. For example, increasing vaccine coverage by 10 percentage points could reduce the mortality rate by approximately 13%, emphasizing the importance of robust immunization initiatives.
 
-##Health Expenditure (Log-Transformed):
+## Health Expenditure (Log-Transformed):
 The coefficient for the log-transformed health expenditure is -0.529, indicating that a 1% increase in health expenditure per capita is associated with a 0.529 unit decrease in the log of the under-five mortality rate, holding all other predictors constant.
 
 ```{r}
@@ -320,6 +340,7 @@ The coefficient for the log-transformed health expenditure is -0.529, indicating
 #| warning: false
 #| message: false
 #| label: tbl-modelresults
+#| tbl-cap: "Outcome predictors of our model"
 
 #### Load libraries ####
 library(tidyverse)
@@ -353,7 +374,7 @@ kable(model_summary, digits = 3)
 # Discussion {#sec-diss}
 
 ## implications
-The UN's Sustainable Development Goal 3.2 aims to reduce the mortality rate of children under five to fewer than 25 per 1,000 live births by 2030 (@who2024). While substantial progress has been made, achieving this target within the next six years presents significant challenges. This study confirms that while the global trend shows a decrease, the pace of this reduction has slowed since 2015. Furthermore, in @sec-data we found significant disparities between countries. Some nations already meet the SDG target, but others exhibit mortality rates four times higher than the threshold, predominantly in low-income regions such as sub-Saharan Africa.
+The UN's Sustainable Development Goal 3.2 aims to reduce the mortality rate of children under five to fewer than 25 per 1,000 live births by 2030 [@who2024]. While substantial progress has been made, achieving this target within the next six years presents significant challenges. This study confirms that while the global trend shows a decrease, the pace of this reduction has slowed since 2015. Furthermore, in @sec-data we found significant disparities between countries. Some nations already meet the SDG target, but others exhibit mortality rates four times higher than the threshold, predominantly in low-income regions such as sub-Saharan Africa.
 
 To meet the SDG targets, urgent and focused international collaboration is required. Our findings emphasize two critical areas for intervention: vaccine coverage and healthcare spending. Vaccination programs have a clear and significant impact on reducing child mortality. Therefore, international aid should prioritize making newborn vaccines affordable, ensuring their availability, and facilitating universal access in high-mortality regions.
 
@@ -374,7 +395,7 @@ Lastly, advanced modeling techniques and the incorporation of additional predict
 # Appendix {-}
 
 
-# Additional data details
+# Additional data details {#sec-methods}
 
 ## Challenges in Observational Data and Sampling
 The data used in this study, particularly under-five mortality rates, are largely derived from surveys, censuses, and observational data rather than complete vital registration systems. Observational data present unique challenges, such as recall bias in surveys, underreporting in regions with weak administrative systems, and inconsistencies in data collection methodologies across countries. These issues are particularly acute in low- and middle-income countries (LMICs), where infrastructure limitations impede accurate data capture.
