--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -68,8 +68,8 @@ The untransformed data range from 0 to 120, with a peak between 10 and 15 deaths
 
 ```{r}
 #| label: fig-mor
-#| fig-cap: Data Analysis for Mortality Rate of Different Countries
-#| fig-subcap: ["Dsitribution before log tranformation", "Distribution after log transformation"]
+#| fig-cap: Data Analysis for Mortality Rate for children under five of Different Countries
+#| fig-subcap: ["Dsitribution of Mortality rate before log tranformation", "Distribution of Mortality rate after log transformation"]
 #| echo: false
 #| warning: false
 #| message: false
@@ -272,7 +272,7 @@ ggplot(analysis_data, aes(x = Vacinne, y = Mortality)) +
     axis.title = element_text(size = 12)
   )
 ```
-## Missing Data and Time Inconsistancy
+## Missing Data and Time Inconsistancy {#sec-data-missing}
 The health expenditure variable was collected in 2021, while other variables reflect 2022 data. This discrepancy is due to unavailability of more recent health expenditure data. These 2021 values are assumed to approximate 2022 conditions sufficiently for analysis.
 
 Additionally, some smaller countries lacked complete data and were excluded from the analysis. The implications of these omissions are addressed in @sec-results.
@@ -307,7 +307,7 @@ We implement this model in R [@citeR] using the rstanarm package [@rstanarm].
 
 ### Model justification
 
-A multivariate linear model was chosen to capture the relationships between the predictors (DPT vaccine coverage, food production index, and current health expenditure) and the response variable (under-five mortality rate). This choice is supported by observed linear trends in the data (see @sec-data). Logarithmic transformations were applied to both the under-five mortality rate and current health expenditure per capita to normalize the distributions and stabilize their linear relationships with the predictors.
+A multivariate linear model was chosen to capture the relationships between the predictors (DPT vaccine coverage, food production index, and current health expenditure) and the response variable (under-five mortality rate). This choice is supported by observed linear trends between each predictors and response in @sec-data. Logarithmic transformations were applied to both the under-five mortality rate and current health expenditure per capita to normalize the distributions and stabilize their linear relationships with the predictors.
 
 Default Bayesian priors were used for the predictors, as they provide a robust starting point. For the intercept term, a \mbox{Normal}(2.5, 1) prior was chosen, reflecting the observed distribution of the response variable (see @sec-data). 
 
@@ -331,13 +331,10 @@ The intercept estimate of 6.643 represents the expected logarithm of the under-f
 ## Food Production Index:
 The coefficient for the food production index is 0.003, indicating a very slight positive relationship between food production and the under-five mortality rate. This naively suggests that reducing food production could also reduce mortality, which is counter-intuitive.
 
-However, a closer examination of the confidence interval for this predictor shows that it includes 0. This implies that the relationship is not statistically significant, and food production is not strongly related to overall under-five mortality rates.
-This finding suggests that while food production is essential for societal well-being, its immediate impact on reducing child mortality might depend on other factors such as food access, distribution systems, and nutritional quality.
+However, a closer examination of the confidence interval for this predictor shows that it includes 0. This implies that the relationship is not statistically significant, so we conclude that food production is not strongly related to overall under-five mortality rates.
 
 ## Vaccine Coverage:
 The coefficient for vaccine coverage is -0.013, meaning that for every 1 percentage point increase in vaccine coverage, the logarithm of the under-five mortality rate decreases by 1.3%, holding other variables constant.
-
-This highlights the critical role of vaccination programs in reducing child mortality. For example, increasing vaccine coverage by 10 percentage points could reduce the mortality rate by approximately 13%, emphasizing the importance of robust immunization initiatives.
 
 ## Health Expenditure (Log-Transformed):
 The coefficient for the log-transformed health expenditure is -0.529, indicating that a 1% increase in health expenditure per capita is associated with a 0.529 unit decrease in the log of the under-five mortality rate, holding all other predictors constant.
@@ -381,19 +378,21 @@ kable(model_summary, digits = 3)
 
 # Discussion {#sec-diss}
 
-## implications
-The UN's Sustainable Development Goal 3.2 aims to reduce the mortality rate of children under five to fewer than 25 per 1,000 live births by 2030 [@who2024]. While substantial progress has been made, achieving this target within the next six years presents significant challenges. This study confirms that while the global trend shows a decrease, the pace of this reduction has slowed since 2015. Furthermore, in @sec-data we found significant disparities between countries. Some nations already meet the SDG target, but others exhibit mortality rates four times higher than the threshold, predominantly in low-income regions such as sub-Saharan Africa.
+## implications in reducing mortality rate
+The UN's Sustainable Development Goal (SDG) 3.2 aims to reduce the mortality rate of children under five to fewer than 25 per 1,000 live births by 2030 [@who2024]. While substantial progress has been achieved, reaching this target within the next six years presents significant challenges. Although global trends indicate a decline in child mortality rates, the pace of this reduction has slowed since 2015 [@who2024]. Moreover, as highlighted in @fig-mor-1, significant disparities persist between countries. Some nations have already surpassed the SDG target, with mortality rates well below the threshold, whereas others—primarily in low-income regions such as sub-Saharan Africa—experience rates four times higher than the target.
 
-To meet the SDG targets, urgent and focused international collaboration is required. Our findings emphasize two critical areas for intervention: vaccine coverage and healthcare spending. Vaccination programs have a clear and significant impact on reducing child mortality. Therefore, international aid should prioritize making newborn vaccines affordable, ensuring their availability, and facilitating universal access in high-mortality regions.
+To achieve the SDG targets, urgent and focused international collaboration is required. Our findings underscore two critical areas for intervention: vaccine coverage and healthcare spending.
 
-Healthcare spending presents a more complex challenge. It encompasses multiple factors, including a country's economic status, infrastructure development, and access to hospital services. Addressing these requires a sustained, long-term commitment. Developed countries can play a pivotal role by providing financial support, sharing technological advancements, and fostering knowledge transfer to enhance healthcare systems in developing nations. Without addressing these systemic issues, achieving equitable child survival rates will remain elusive.
+Vaccination programs have a demonstrable and significant impact on reducing child mortality. As shown in @fig-DPT-1, the distribution of DPT vaccine coverage is skewed left, indicating that while most countries maintain adequate immunization rates, certain nations lag considerably behind. WHO’s analysis of DPT vaccine coverage highlights that low-performing countries are concentrated in Africa, the Eastern Mediterranean, and South-East Asia regions [@who_dtp3_coverage]. These countries, predominantly developing nations, often face financial constraints that prevent them from funding vaccines for their newborn populations. Consequently, international aid is crucial to making DPT vaccines accessible and affordable in these regions.
+
+Healthcare spending presents a more complex challenge. It involves multiple factors, including a country’s economic capacity, infrastructure development, and access to healthcare services. Addressing these issues requires sustained, long-term efforts. Developed nations can play a pivotal role by providing financial support, sharing technological advancements, and facilitating knowledge transfer to strengthen healthcare systems in developing countries. Without addressing these systemic challenges, achieving equitable child survival rates will remain an unattainable goal.
 
 ## limitation and next steps
-This study has several limitations that should be addressed in future research. First, as discussed in Section 2, we lack data from several smaller countries. While their populations are minimal, excluding these nations raises potential biases and ethical concerns by not representing their unique challenges. Second, the most recent data available is from 2022. More current datasets would enable a more accurate analysis, reflecting recent developments in healthcare and child mortality trends.
+This study has several limitations that should be considered in future research. First, as noted in @sec-data-missing, data from several countries is unavailable. While these nations have minimal populations, excluding them introduces potential biases and raises ethical concerns by overlooking their unique challenges. Second, the most recent data used in this study is from 2022. Access to more current data sets would enable a more accurate and relevant analysis, reflecting recent developments in healthcare and child mortality trends.
 
-Additionally, while this study focused on three predictors, the dataset contains other indicators that could potentially enrich the analysis. However, many of these indicators suffer from missing or outdated data, limiting their utility. Future research should prioritize ensuring data completeness and timeliness to enhance model robustness.
+Additionally, while this study focused on three primary predictors, the dataset includes other indicators that could potentially enrich the analysis. Unfortunately, many of these indicators suffer from missing or outdated values, limiting their utility. Future research should prioritize data completeness and timeliness to improve model robustness and reliability.
 
-Lastly, advanced modeling techniques and the incorporation of additional predictors could yield deeper insights. Future studies should explore innovative models to capture complex relationships and interactions, thereby providing more nuanced recommendations for policy interventions.
+Finally, advanced modeling techniques and the inclusion of additional predictors could yield deeper insights. Future studies should explore innovative models to better capture complex relationships and interactions, offering more nuanced recommendations for policy interventions.
 
 
 \newpage
