--- a/paper/references.bib
+++ b/paper/references.bib
@@ -106,7 +106,7 @@
 @misc{who2024,
   title = {Children: Reducing Mortality},
   author = {{World Health Organization}},
-  year = {n.d.},
+  year = {2024},
   url = {https://www.who.int/news-room/fact-sheets/detail/children-reducing-mortality#:~:text=There%20are%20two%20targets%3A%201%20Reduce%20newborn%20mortality,25%20per%201000%20live%20births%20in%20every%20country.},
   note = {Accessed November 18, 2024}
 }
@@ -146,6 +146,14 @@
   note         = {World Development Indicators},
   url          = {https://data.worldbank.org/indicator/SH.IMM.IDPT},
   urldate      = {2024-11-24}
+}
+
+@misc{who_dtp3_coverage,
+  author       = {{World Health Organization}},
+  title        = {Diphtheria Tetanus Toxoid and Pertussis (DTP3) Immunization Coverage Among 1-Year-Olds},
+  year         = {2024},
+  howpublished = {\url{https://www.who.int/data/gho/data/indicators/indicator-details/GHO/diphtheria-tetanus-toxoid-and-pertussis-(dtp3)-immunization-coverage-among-1-year-olds-(-)}},
+  note         = {Accessed: 2024-11-26}
 }
 
 
