Methodology 2nd edi

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -402,28 +402,27 @@ Finally, advanced modeling techniques and the inclusion of additional predictors
 # Appendix {-}
 
 
-# Additional data details {#sec-methods}
+# Sampling Methodology Overview and Evaluation {#sec-methods}
 
-## Challenges in Observational Data and Sampling
-The data used in this study, particularly under-five mortality rates, are largely derived from surveys, censuses, and observational data rather than complete vital registration systems. Observational data present unique challenges, such as recall bias in surveys, underreporting in regions with weak administrative systems, and inconsistencies in data collection methodologies across countries. These issues are particularly acute in low- and middle-income countries (LMICs), where infrastructure limitations impede accurate data capture.
+## Overview
 
-Sampling Strategies
-To mitigate these challenges, the UN Inter-agency Group for Child Mortality Estimation employs a combination of direct and indirect estimation techniques. Direct methods rely on household surveys, such as Demographic and Health Surveys (DHS) and Multiple Indicator Cluster Surveys (MICS), which use stratified random sampling to ensure representativeness. These surveys ask respondents to recall birth and death histories, which introduces recall bias, particularly for events occurring further in the past.
+This study explores the relationship between under-five mortality rates and three key predictors: food production index, DPT vaccine coverage, and per capita health expenditure. The under-five mortality rate is derived from a combination of vital registration systems, household surveys (e.g., Demographic and Health Surveys and Multiple Indicator Cluster Surveys), and indirect estimation models developed by UN agencies and collaborating academic institutions [@worldbank2024M]. These data sources aim to address disparities in coverage, particularly in regions where vital registration is incomplete.
 
-Indirect methods use model life tables and historical data to extrapolate mortality estimates in the absence of recent or reliable survey data. These methods rely on assumptions about fertility, mortality trends, and the demographic structure of the population, which may not hold true in all contexts, particularly in regions experiencing rapid epidemiological transitions or conflict.
+The food production index, developed by the Food and Agriculture Organization of the United Nations (FAO), quantifies national agricultural output relative to a baseline period (2014–2016) using official national statistics and supplementary surveys [@worldbank_foodindex2024]. Per capita health expenditure is sourced from the World Health Organization (WHO) using the System of Health Accounts (SHA 2011), which systematically tracks all public and private spending on health services, goods, and infrastructure [@worldbank_health_expenditure_us]. Lastly, DPT vaccine coverage is estimated through a combination of administrative data from immunization service providers and household surveys, reflecting the proportion of children aged 12–23 months who received three doses of the vaccine [@worldbank_dpt_immunization].
 
-## Linkages to Literature
-The challenges and methodologies described align with findings in the literature. Alkema and New (2014) emphasized the importance of integrating multiple data sources to improve the reliability of child mortality estimates. They highlighted the use of Bayesian hierarchical models to synthesize survey and vital registration data, which is a key component of the UN Inter-agency Group’s methodology.
+## Population sample frame, and samplng appraoch 
 
-Moultrie et al. (2013) detailed the limitations of indirect estimation methods, particularly their reliance on model assumptions that may not hold in regions undergoing rapid social or economic change. Their findings support the use of simulation studies, such as ours, to assess the robustness of mortality estimates under varying data quality scenarios.
+The target population for the response variable, under-five mortality rate, includes all children under the age of five globally in 2022. This metric captures the probability per 1,000 live births that a newborn will die before reaching five years of age, providing a direct measure of child survival across regions and contexts. The predictors each represent distinct populations. The food production index measures agricultural output for entire national populations, reflecting food availability and potential nutritional impacts. Similarly, per capita health expenditure pertains to the entire population within a country, as healthcare spending influences system-wide access and quality. DPT vaccine coverage, by contrast, specifically targets the population of children aged 12–23 months, providing insights into immunization rates and public health outreach.
 
-## Implications for Policy and Future Research
-The limitations of survey-based and observational data highlight the need for:
+The sampling frame for each variable aligns with its respective population. Under-five mortality rates rely on vital registration systems, which are designed to record all births and deaths. In regions where these systems are incomplete, surveys and statistical models supplement the data to ensure national representativeness. The food production index uses national agricultural statistics as the primary source, with secondary data from government ministries and international organizations filling gaps [@worldbank_foodindex2024]. For DPT vaccine coverage, data are collected through administrative immunization records verified by household surveys [@worldbank_dpt_immunization]. Per capita health expenditure is derived from national accounts and follows the standardized SHA 2011 framework [@worldbank_health_expenditure_us].
 
-Investment in Vital Registration Systems: Increasing the coverage and quality of birth and death registrations in LMICs would reduce reliance on indirect methods and improve the accuracy of mortality estimates.
-Improved Survey Methodologies: Incorporating digital data collection tools and cross-validation with other data sources can reduce recall bias and enhance data reliability.
-Advanced Statistical Techniques: Bayesian hierarchical models and machine learning approaches can integrate diverse data sources and account for biases more effectively than traditional methods.
-Future research should focus on combining survey data with novel data sources, such as satellite imagery and mobile health records, to address data gaps and improve mortality estimation in real time. These approaches could revolutionize the monitoring of global health indicators, enabling more targeted and timely interventions. (Add refer)
+The sampling approach for these variables combines census-based data collection with stratified sampling in regions lacking comprehensive infrastructure. While census methods aim to capture complete population-level data, resource constraints in low- and middle-income countries necessitate reliance on surveys and indirect estimation methods. These approaches use stratification to ensure representativeness while accounting for regional disparities. 
+
+## Strngth and weakness
+
+The methodological framework demonstrates several strengths. First, the primary reliance on census-based or near-census-level data ensures comprehensive coverage for most variables. This is particularly evident in high-income regions, where systems such as vital registration achieve over 90% completeness [@WHO2024CRVS]. Second, the use of supplementary data sources, such as surveys or administrative records, mitigates gaps in the primary datasets, enhancing data quality. For instance, the food production index excludes non-nutritive products such as coffee and tea, ensuring a focus on agricultural outputs relevant to nutrition [@worldbank_foodindex2024]. The use of standardized frameworks, such as SHA 2011 for health expenditure, further supports consistency and comparability across countries.
+
+However, notable weaknesses persist. In regions with incomplete infrastructure, such as Sub-Saharan Africa, vital registration systems capture only 44% of deaths, leading to substantial data gaps that require imputation through statistical models [@WHO2024CRVS]. These models rely on assumptions that may not fully reflect local demographic trends, introducing potential biases. Moreover, reliance on household surveys for DPT vaccine coverage and mortality data introduces recall bias, as respondents may inaccurately report past events [@Preston1984AgePattern]. Even census-based data are susceptible to misreporting, undercounting, or misclassification, which can distort results. Furthermore, temporal mismatches among variables (e.g., health expenditure data lagging behind mortality rates) may complicate causal inference and trend analysis. 
 
 # Model details {#sec-model-details}
 
