--- a/paper/references.bib
+++ b/paper/references.bib
@@ -156,5 +156,26 @@
   note         = {Accessed: 2024-11-26}
 }
 
+@misc{WHO2024CRVS,
+  title        = {Civil Registration and Vital Statistics},
+  author       = {{World Health Organization}},
+  year         = {2024},
+  url          = {https://www.who.int/news-room/fact-sheets/detail/civil-registration-and-vital-statistics},
+  note         = {Accessed: 2024-11-27}
+}
+
+@article{Preston1984AgePattern,
+  author       = {Samuel H. Preston},
+  title        = {Children and the Age Pattern of Mortality},
+  journal      = {Population and Development Review},
+  volume       = {10},
+  number       = {1},
+  pages        = {69--76},
+  year         = {1984},
+  publisher    = {Population Council},
+  doi          = {10.2307/1171470},
+  url          = {https://www.jstor.org/stable/1171470?origin=crossref},
+  note         = {Accessed: 2024-11-27}
+}
 
 
